feat: write text file

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,8 @@
 
 <body>
 
-  <script src="./read-vs-slice-benchmark.ts" type="module"></script>
+  <!-- <script src="./read-vs-slice-benchmark.ts" type="module"></script> -->
+  <script src="./demo.ts" type="module"></script>
 </body>
 
 </html>
