--- a/demo/benchmark.html
+++ b/demo/benchmark.html
@@ -11,21 +11,25 @@
   <h2>Write</h2>
   <p>Write 100KB of data in one operation, repeat it 1000 times, for a total of 100MB.</p>
   <div>
-    <label>built-in Writer:</label>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/API/FileSystemFileHandle/createWritable"
+      target="_blank">FileSystemFileHandle
+      createWritable:</a>
     <strong id="built-in-writer-cost"></strong>
   </div>
   <div>
-    <label>OPFS Tools:</label>
+    <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools:</a>
     <strong id="opfs-tools-writer-cost"></strong>
   </div>
   <h2>Read</h2>
   <p>Read 100KB in a single operation, perform 10000 reads with random positions.</p>
   <div>
-    <label>File slice:</label>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/API/FileSystemFileHandle/createWritable"
+      target="_blank">FileSystemFileHandle
+      createWritable:</a>
     <strong id="file-slice-read-cost"></strong>
   </div>
   <div>
-    <label>OPFS Tools:</label>
+    <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools:</a>
     <strong id="opfs-tools-read-cost"></strong>
   </div>
   <p></p>
