--- a/demo/benchmark.html
+++ b/demo/benchmark.html
@@ -23,9 +23,7 @@
   <h2>Read</h2>
   <p>Read 100KB in a single operation, perform 10000 reads with random positions.</p>
   <div>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/API/FileSystemFileHandle/createWritable"
-      target="_blank">FileSystemFileHandle
-      createWritable:</a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Blob/slice" target="_blank">Blobs lice:</a>
     <strong id="file-slice-read-cost"></strong>
   </div>
   <div>
