--- a/demo/benchmark.html
+++ b/demo/benchmark.html
@@ -22,6 +22,7 @@
     <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools:</a>
     <strong id="opfs-tools-writer-cost"></strong>
   </div>
+  <div>opfs-tools cost ~1x for nodejs</div>
   <h2>Read</h2>
   <p>Read 100KB in a single operation, perform 10000 reads with random positions.</p>
   <div>
@@ -32,6 +33,7 @@
     <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools:</a>
     <strong id="opfs-tools-read-cost"></strong>
   </div>
+  <div>opfs-tools cost ~12x for nodejs</div>
   <p>Read all data of a 100MB file in one go.</p>
   <div>
     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Blob/slice" target="_blank">Blobs lice:</a>
@@ -41,6 +43,7 @@
     <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools:</a>
     <strong id="opfs-tools-read-all-cost"></strong>
   </div>
+  <div>opfs-tools cost ~1.4x for nodejs</div>
   <p></p>
   <script src="./benchmark.ts" type="module"></script>
 </body>
