--- a/demo/benchmark.html
+++ b/demo/benchmark.html
@@ -28,7 +28,7 @@
   <div>
     <a href="https://developer.mozilla.org/en-US/docs/Web/API/FileSystemFileHandle/createWritable"
       target="_blank">FileSystemFileHandle
-      createWritable:</a>
+      createWritable (Main Thread):</a>
     <strong id="built-in-writer-cost"></strong>
   </div>
   <div>
@@ -37,7 +37,7 @@
     <span class="tip">, created 1000 records（创建了 1000 条记录）</span>
   </div>
   <div>
-    <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools:</a>
+    <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools (WebWorker):</a>
     <strong id="opfs-tools-writer-cost"></strong>
   </div>
   <p>
@@ -54,7 +54,7 @@
     <span>每次读取 100KB，随机位置读取 1000 次</span>
   </p>
   <div>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Blob/slice" target="_blank">Blob slice:</a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Blob/slice" target="_blank">Blob slice (Main Thread):</a>
     <strong id="file-slice-read-cost"></strong>
   </div>
   <div>
@@ -63,7 +63,7 @@
     <span class="tip">, read 1000 records sequentially（顺序读取前面创建的 1000 条记录）</span>
   </div>
   <div>
-    <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools:</a>
+    <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools (WebWorker):</a>
     <strong id="opfs-tools-read-cost"></strong>
   </div>
   <p>
@@ -79,11 +79,11 @@
     <span>一次性读取 100MB 文件的所有数据</span>
   </p>
   <div>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Blob/slice" target="_blank">Blobs lice:</a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Blob/slice" target="_blank">Blob slice (Main Thread):</a>
     <strong id="file-slice-read-all-cost"></strong>
   </div>
   <div>
-    <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools:</a>
+    <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools (WebWorker):</a>
     <strong id="opfs-tools-read-all-cost"></strong>
   </div>
 
