refactor: optz file.arraybuffer

--- a/demo/benchmark.html
+++ b/demo/benchmark.html
@@ -73,7 +73,7 @@
   </p>
 
 
-  <p>
+  <!-- <p>
     <span>3. Read all data of a 100MB file in one go.</span>
     <br>
     <span>一次性读取 100MB 文件的所有数据</span>
@@ -85,7 +85,7 @@
   <div>
     <a href="https://github.com/hughfenghen/opfs-tools" target="_blank"> opfs-tools (WebWorker):</a>
     <strong id="opfs-tools-read-all-cost"></strong>
-  </div>
+  </div> -->
 
   <p>
     <span>opfs-tools cost ~1.4x times as much as Node.js</span>
